--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <!-- Hero -->
   <section class="bg-blue-600 text-white py-20">
     <div class="container mx-auto px-6 text-center">
-      <h2 class="text-4xl md:text-5xl font-bold mb-4">Hola, soy Tu Nombre</h2>
-      <p class="text-lg md:text-xl mb-6">Desarrollador Full Stack | Especialista en Seguridad Web | Innovador en IA</p>
+      <h2 class="text-4xl md:text-5xl font-bold mb-4">Hola, soy Fidel</h2>
+      <p class="text-lg md:text-xl mb-6">Desarrollador Full Stack</p>
       <a href="#proyectos" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-200 transition">Ver mis proyectos</a>
     </div>
   </section>
