--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="bg-white shadow">
     <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Tu Nombre</h1>
+      <h1 class="text-2xl font-bold">Fidel Acevedo</h1>
       <nav class="space-x-4">
         <a href="#sobre-mi" class="hover:text-blue-600">Sobre mí</a>
         <a href="#proyectos" class="hover:text-blue-600">Proyectos</a>
